Enable printing of text shadows

Same as box shadows, text shadows are controlled by the "Background
Graphics" printing option.

BUG=768397

Change-Id: I511cdd19da249049ac9843377f5620088b413d6b